--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <img class="card-img-top rounded img-thumbnail avatar" src="assets/images/muhammad.jpg" alt="muhammad">
+                <img class="card-img-top rounded img-thumbnail avatar" src="assets/images/muhammad.png" alt="muhammad">
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Muhammad Rafli</h4>
